--- a/queries/kaplan_meier/index.html
+++ b/queries/kaplan_meier/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   
-  <title>Getting Started &middot; BMEG</title>
+  <title>Kaplan Meier Curves &middot; BMEG</title>
   
 
   
@@ -74,7 +74,7 @@
             <ul class="sidebar-nav sidebar-nav-nested">
               <li>
                 <a href="https://bmeg.github.io/queries/getting_started/"
-                   class="sidebar-nav-item  active"
+                   class="sidebar-nav-item "
                 >Getting Started</a></li>
             </ul>
           </li>
@@ -92,7 +92,7 @@
             <ul class="sidebar-nav sidebar-nav-nested">
               <li>
                 <a href="https://bmeg.github.io/queries/kaplan_meier/"
-                   class="sidebar-nav-item "
+                   class="sidebar-nav-item  active"
                 >Kaplan Meier Curves</a></li>
             </ul>
           </li>
@@ -173,81 +173,34 @@
   <div class="main col span_8_of_12">
     
 
-<h1 id="usage">Usage</h1>
+<h1 id="make-kaplan-meier-curves-using-tcga-data">Make Kaplan Meier curves using TCGA data</h1>
 
-<p>AQL is an API for making graph queries using structured data. Queries are defined using a series of step operations provided by BMEG. The python client wraps the construction of these queries in an intuitive python interface.</p>
-
-<p>Let&rsquo;s go through the features currently supported in the AQL python client.</p>
-
-<h2 id="import">import</h2>
-
-<p>First, import the AQL client and create a connection to an existing AQL API:</p>
-
-<pre><code class="language-python">import aql
-conn = aql.Connection('http://bmeg.io')
+<pre><code class="language-python">from lifelines import KaplanMeierFitter
+import pandas
+import aql
+conn = aql.Connection(&quot;http://arachne.compbio.ohsu.edu&quot;)
 O = conn.graph(&quot;bmeg&quot;)
+
+q = O.query().V().where(aql.eq(&quot;_label&quot;, &quot;Individual&quot;))
+q = q.where(aql.and_(aql.eq(&quot;source&quot;, &quot;tcga&quot;), aql.eq(&quot;disease_code&quot;, &quot;BRCA&quot;)))
+q = q.where(aql.eq(&quot;vital_status&quot;, &quot;Dead&quot;))
+
+q1 = q.where(aql.eq('her2_status_by_ihc', 'Positive')).render([&quot;death_days_to&quot;])
+q2 = q.where(aql.eq('her2_status_by_ihc', 'Negative')).render([&quot;death_days_to&quot;])
+
+days_a = list(int(a[0]) for a in q1)
+days_b = list(int(a[0]) for a in q2)
+
+kmf = KaplanMeierFitter()
+kmf.fit(days_a, label=&quot;HER2 Positive&quot;)
+ax = kmf.plot()
+kmf.fit(days_b, label=&quot;HER2 Negative&quot;)
+kmf.plot(ax=ax)
 </code></pre>
 
-<p>Now that we have an BMEG graph instance, we can use this to make all of our queries.</p>
+<p>Returns</p>
 
-<h2 id="finding-a-vertex">finding a vertex</h2>
-
-<p>One of the first things you probably want to do is find some vertex out of all of the vertexes available in the system. In order to do this, we need to know something about the vertex we are looking for. To start, let&rsquo;s see if we can find a specific gene:</p>
-
-<pre><code class="language-python">print list(O.query().V().where(aql.eq(&quot;_label&quot;, &quot;Gene&quot;)).where(aql.eq(&quot;symbol&quot;, &quot;TP53&quot;)))
-</code></pre>
-
-<p>A couple things about this first and simplest query. We start with <code>O</code>, our AQL instance connected to the BMEG, and create a new query with <code>.query()</code>. This query is now being constructed. You can chain along as many operations as you want, and nothing will actually get sent to the server until you print the results.</p>
-
-<p>Once we make this query, we get a result:</p>
-
-<pre><code>[&lt;AttrDict(
-  {u'gid': u'gene:ENSG00000141510',
-  u'data': {
-    u'end': 7687550,
-    u'description': u'tumor protein p53 [Source:HGNC Symbol%3BAcc:HGNC:11998]',
-    u'symbol': u'TP53',
-    u'start': 7661779,
-    u'seqId': u'17',
-    u'strand': u'-',
-    u'id': u'ENSG00000141510',
-    u'chromosome': u'17'
-  },
-  u'label': u'Gene'})&gt;
-]
-</code></pre>
-
-<p>This represents the vertex we queried for above. All vertexes in the system will have a similar structure, basically:</p>
-
-<ul>
-<li><em>gid</em>: This represents the global identifier for this vertex. In order to draw edges between different vertexes from different data sets we need an identifier that can be constructed from available data. Often, the <code>gid</code> will be the field that you query on as a starting point for a traversal.</li>
-<li><em>label</em>: The label represents the type of the vertex. All vertexes with a given label will share many property keys and edge labels, and form a logical group within the system.</li>
-<li><em>data</em>: This is where all the data goes. <code>data</code> can be an arbitrary map, and these properties can be referenced during traversals.</li>
-</ul>
-
-<p>You can also do a <code>where</code> query with a list of items using <code>aql.in_([...])</code> (other conditions exist, see the <code>Conditions</code> section below):</p>
-
-<pre><code class="language-python">print list(O.query().V().where(aql.eq(&quot;_label&quot;, &quot;Gene&quot;)).where(aql.in_(&quot;symbol&quot;, [&quot;TP53&quot;, &quot;BRCA1&quot;])).render({&quot;gid&quot;: &quot;_gid&quot;, &quot;symbol&quot;:&quot;symbol&quot;}))
-</code></pre>
-
-<p>This returns both Gene vertexes:</p>
-
-<pre><code>[
-  &lt;AttrDict({u'symbol': u'TP53', u'gid': u'gene:ENSG00000141510'})&gt;,
-  &lt;AttrDict({u'symbol': u'BRCA1', u'gid': u'gene:ENSG00000012048'})&gt;
-]
-</code></pre>
-
-<p>Once you are on a vertex, you can travel through that vertex&rsquo;s edges to find the vertexes it is connected to. Sometimes you don&rsquo;t even need to go all the way to the next vertex, the information on the edge between them may be sufficient.</p>
-
-<p>Edges in the graph are directional, so there are both incoming and outgoing edges from each vertex, leading to other vertexes in the graph. Edges also have a <em>label</em>, which distinguishes the kind of connections different vertexes can have with one another.</p>
-
-<p>Starting with gene TP53, and see what kind of other vertexes it is connected to.</p>
-
-<pre><code class="language-python">O.query().V().where(aql.eq(&quot;_label&quot;, &quot;Gene&quot;)).where(aql.eq(&quot;symbol&quot;, &quot;TP53&quot;))
-</code></pre>
-
-<p>Here we have introduced a couple of new steps. The first is <code>.out()</code>. This starts from wherever you are in the graph at the moment and travels out along all the outgoing edges.</p>
+<p><img src="https://bmeg.github.io/img/her2_km.png" alt="HER2 KM Curve" /></p>
 
   </div>
 
