Adding link to data

--- a/building/index.html
+++ b/building/index.html
@@ -173,7 +173,11 @@
   <div class="main col span_8_of_12">
     
 
-<h1 id="data-import">Data Import</h1>
+<h2 id="bmeg-data-base-copy">BMEG-Data Base Copy</h2>
+
+<ul>
+<li><a href="http://data.bmeg.io/bmeg-data.20180614.tar.gz">20180614</a></li>
+</ul>
 
 <h2 id="active-data-transforms">Active Data Transforms</h2>
 
