--- a/system/index.html
+++ b/system/index.html
@@ -171,7 +171,11 @@
   </div>
 
   <div class="main col span_8_of_12">
-    <p><img src="https://bmeg.github.io/img/bmeg_architecture.png" alt="Example image" /></p>
+    
+
+<h2 id="bmeg-system">BMEG System</h2>
+
+<p>The BioMedical Evidence Graph integrates various biological data source into a single property graph to enable easy analysis. The BMEG is powered by the <a href="https://github.com/bmeg/arachne">Arachne</a> graph database engine. The current installation covers data from TCGA, CCLE, CTDD, GTEX, Ensembl, PathwayCommons and contains almost 32 million vertices.</p>
 
   </div>
 
