--- a/updates/index.html
+++ b/updates/index.html
@@ -173,6 +173,17 @@
   <div class="main col span_8_of_12">
     
 
+<h2 id="june-14th-2018">June 14th, 2018</h2>
+
+<ul>
+<li>Updated Database engine <a href="https://github.com/bmeg/arachne">Arachne</a> v0.2</li>
+<li>Updated client install instructions</li>
+<li>Updated query language instructions</li>
+<li>Released new <a href="https://github.com/bmeg/analysis">iPython Analysis notebook examples</a></li>
+<li>New Schema</li>
+<li>Bulk Data <a href="http://data.bmeg.io/bmeg-data.20180614.tar.gz">download</a></li>
+</ul>
+
 <h2 id="december-5th-2017">December 5th, 2017</h2>
 
 <ul>
